# MoE-Specialisation

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  POPE_IMPLEMENTATION.md  README.md  UNIFIED_SIMILARITY_CONFIG_MIGRATION.md  check_priming_results.sh  check_test_captions.sh  eval_captions_standalone.py  fix_caption_ids.py  pyproject.toml  requirements.txt  test_prompts.py  view_images.sbatch  view_synthetic_images.py
.github/workflows/: ci.yml
analysis_scripts/: README.md  __init__.py  attention_routing_analysis.py  attention_routing_plots.py  coco_feasibility_test.py  compositional_case_study.py  create_stage_comparison.py  cross_concept_similarity_matrix.py  cross_modality_purity.py  cross_modality_purity_plots.py  expert_metrics_plots.py  layer_clustering_analysis.py  layer_clustering_plots.py  plot_expert_metrics.py  routing_ablation_experiment.py  test_extraction_logic.py  test_stage3_pope_prompt.py  token_activations.py
analysis_scripts/_lib/: __init__.py  config.py  io.py  model_loading.py  representations.py  synthetic_images.py  viz.py
analysis_scripts/karpathy_evaluation/: 01_preprocess_karpathy.py  (+7 more)
configs/: attention_routing_analysis.json  clustering_analysis.json  compositional_case_study.json  compositional_coco.json  similarity_matrix.json  similarity_matrix_stage3.json  stage3_alignment.json  training_config.yaml
data/: COCO_loader.py  LLaVA_loader.py  __init__.py  compositional_stimuli.json  loaders.py
docs/: coco_feasibility_test_guide.md  color_coherence_score_guide.md  color_compositional_alternatives.md  follow_up_case_study_options.md
models/: __init__.py  custom_mistral.py  moe_layer.py  vl_connector.py
tests/: conftest.py  oracle.py  test_analysis_lib.py  test_config_loader.py  test_create_moe_model.py  test_custom_mistral_roundtrip.py  test_data_label_masking.py  test_imports.py  test_moe_layer.py  test_training_dry_run.py  test_vl_connector.py
training_scripts/: train_dense.py  train_stage_1.py  train_stage_2.5.py  train_stage_2.py  train_stage_3.py
(+55 files in other folders)
