[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moe-specialisation"
version = "0.1.0"
description = "Mixture-of-Experts vision-language model (custom MoE Mistral-7B): a vision expert and a text expert per FFN layer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anthony Ticinovic", email = "apticinovic@gmail.com" }]
keywords = ["mixture-of-experts", "vision-language-model", "mistral", "multimodal", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    # Capped below 5: the paper was produced on the transformers 4.x line and
    # v5 changes Mistral model internals (numerics/behaviour boundary).
    "transformers>=4.40.0,<5",
    "datasets>=2.14.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "pycocotools>=2.0.7",
    "pycocoevalcap>=1.2",
]

[project.optional-dependencies]
# Stage 3 distributed training extras. flash-attn requires --no-build-isolation
# and is intentionally excluded from CI.
hpc = [
    "flash-attn>=2.3.0",
    "bitsandbytes>=0.41.0",
]

[project.urls]
Repository = "https://github.com/apticinovic/MoE-Specialisation"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
# Existing flat packages — DO NOT move to a src/ layout or rename:
# create_moe_model.py copies these files into checkpoint dirs for
# trust_remote_code (auto_map: "custom_mistral.MistralMoEConfig").
packages = ["models", "data"]
